<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1" />

            <RadioGroup
                android:id="@+id/Rg1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonYes"
                    android:layout_width="209dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/textViewq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"/>

            <RadioGroup
                android:id="@+id/Rg2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonYes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButtonNo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

            </RadioGroup>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewa3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1" />

            <RadioGroup
                android:id="@+id/Rg3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonYes2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButtonNo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewq4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>